--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,6 @@ authors = ["Michael Giansiracusa <giansiracumt@ornl.gov>"]
 edition = "2018"
 
 [dependencies]
-netcdf = {version = "~0.1.0"}
+netcdf = {version = "~0.3.1"}
 log = {version = "~0.4.6"}
-log4rs = {version = "~0.8.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"]}
-# env_logger = {version = "~0.6.1"}
-clap = {version = "~2.33.0", features = ["yaml"]}
+structopt = "0.3.7"
